[package]
name = "dilbot"
version = "0.1.0"
authors = ["Zachary Johnson <zjohnson366@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP CLIENT
reqwest = "0.9.18"

#HTML Parser and Querier
select = "0.4.2"

chrono = "0.4.9"